<resources>
    <string name="app_name">Genshin</string>
    <string name="characters">Персонажи</string>
    <string name="dictionary">Словарь</string>
    <string name="wishes">Молитвы</string>
    <string name="settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sort">Сортировать</string>
    <string name="about_title">О проекте</string>
    <string name="about_content">По задумке это небольшой и уютненький сайт, где можно найти всякое интересное по игре Genshin Impact. Сайт не представляет собой прям базу, а скорее всего что-то типа собрания интересных и иногда полезных фактов и данных. Всем кто хочет связаться и пообщаться по поводу сайта или о других мелочах:\nPrezident123#9662\nПо поводу APK: Josty#0626</string>
    <string name="rights">Все права на материалы показанные на сайте принадлежат компании miHoYo. Информация на сайте взята из официальных источников miHoYo. Если нет, то внизу будет ссылка на источник.</string>
    <string name="description">Описание</string>
    <string name="from_rare_to_less">От редких к менее</string>
    <string name="from_less_rare">От менее редких</string>
    <string name="alphabetically">По алфавиту</string>
    <string name="from_the_end_of_the_alphabet">С конца алфавита</string>
    <string name="by_the_elements">По стихиям</string>
    <string name="by_if_in_bd">По ID в БД</string>
    <string name="rarity_with_colon">Редкость:</string>
    <string name="weapon_with_colon">Оружие:</string>
    <string name="gender">Пол:</string>
    <string name="birthday_with_colon">День рождения:</string>
    <string name="change_theme">Сменить тему</string>
    <string name="full_name_with_colon">Полное имя:</string>
    <string name="welcome">Добро пожаловать!!!</string>
    <string name="belonging">Принадлежность:</string>
    <string name="region_with_colon">Регион:</string>
    <string name="eye_with_colon">Глаз Бога:</string>
    <!--<string name="settings">Настройки</string>
    <string name="wishes">Молитвы</string>
    <string name="dictionary">Хиличурлский</string>
    <string name="characters">Персонажи</string>-->
    <string name="main">Главная</string>

    <string-array name="sort_by">
        <item>От редких к менее</item>
        <item>От менее редких</item>
        <item>По алфавиту</item>
        <item>С конца алфавита</item>
        <item>По стихиям</item>
        <item>По ID в БД</item>
    </string-array>

    <string name="login">Войти</string>
    <string name="password">Пароль</string>
    <string name="username">Имя пользователя</string>
    <string name="edit">Изменить</string>
    <string name="clear">Отмена</string>
    <string name="done">Готово</string>
    <string name="undo">Назад</string>
    <string name="redo">Вперед</string>
    <string name="no_connection">Нет подключения.</string>

    <string name="rarity">Редкость</string>
    <string name="weapon">Оружие</string>
    <string name="eye">Глаз бога</string>
    <string name="full_name">Полное имя</string>
    <string name="sex">Мужской</string>
    <string name="birthday">День рождения</string>
    <string name="region">Регион</string>
    <string name="affiliation">Принадлежность</string>
    <string name="sorting">Сортировка</string>
</resources>