<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/character_logo"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginVertical="24dp"
                android:src="@mipmap/tartalia_full" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cr15dp"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView style="@style/TextView.MatchParent22sp" />

                <TextView
                    style="@style/TextView.WrapContent16sp"
                    android:text="@string/rarity" />

                <TextView
                    style="@style/TextView.WrapContent16sp"
                    android:text="@string/weapon" />

                <TextView
                    style="@style/TextView.WrapContent16sp"
                    android:text="Глаз Бога: " />

                <TextView
                    style="@style/TextView.WrapContent16sp"
                    android:text="@string/full_name" />

                <TextView
                    style="@style/TextView.WrapContent16sp"
                    android:text="@string/gender" />

                <TextView
                    style="@style/TextView.WrapContent16sp"
                    android:text="@string/birthday" />

                <TextView
                    style="@style/TextView.WrapContent16sp"
                    android:text="Регион: " />

                <TextView
                    style="@style/TextView.WrapContent16sp"
                    android:text="Принадлежность: " />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/cr15dp"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    style="@style/TextView.MatchParent22sp"
                    android:text="@string/description" />

                <TextView
                    style="@style/TextView.WrapContent16sp"
                    android:layout_width="match_parent" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>