<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <Button
                android:id="@+id/toggler"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="12dp"
                android:background="@drawable/cr10dp"
                android:text="@string/change_theme"
                android:textAllCaps="false" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:src="@mipmap/about" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="12dp"
                android:background="@drawable/cr15dp"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    style="@style/TextView.MatchParent22sp"
                    android:text="@string/about_title" />

                <TextView
                    style="@style/TextView.MatchParent16sp"
                    android:text="@string/about_content" />

            </LinearLayout>

            <TextView
                style="@style/TextView.MatchParent16sp"
                android:text="@string/rights"
                android:textAlignment="center"
                android:textColor="@color/text_description"
                android:textSize="13sp" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>