<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingVertical="12dp"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/ic_logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginVertical="12dp"
        android:background="@drawable/cr15dp"
        android:padding="24dp">

        <EditText
            android:id="@+id/username"
            android:background="@drawable/edit_text_border"
            android:textColorHint="#AFAFAF"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:paddingHorizontal="8dp"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:hint="@string/username"
            android:lines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_below="@+id/username"
            android:background="@drawable/edit_text_border"
            android:layout_marginTop="24dp"
            android:textColorHint="#AFAFAF"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:paddingHorizontal="8dp"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/password"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/cr10dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#FFF" />

    </RelativeLayout>

</RelativeLayout>